@@ -1,3 +1,9 @@
+2004-07-08 Scott Dattalo <scott@dattalo.com>
+	* gui/gui_main.cc, cli/socket.cc, cli/input.cc, configure.in: Added
+	support for multithreading.
+	* TODO: cleaned up the TODO list a little by removing some outdated
+	items.
+
 2004-07-08  Manuel Bouyer <bouyer@antioche.eu.org>
 	* src/16bit-registers.cc, src/16bit-registers.h: Added put() and
 	update_pin_directions() methods for the PORTC16 class
